--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -25,18 +25,28 @@ a {
 
 /* buttons */
 button, .btn {
-  background: var(--secondary);
-  border-radius: 8px;
-  border: 0;
-  padding: 8px 12px;
+  /* background: var(--secondary); */
+  border-radius: .5rem;
+  border: 1px solid rgba(255, 213, 130, 0.815);
+  padding: .5rem 1rem;
   font-weight: 600;
   cursor: pointer;
   align-self: flex-end;
   margin: 1rem 0 0;
+  background: hsl(40, 87%, 59%);
+  background: linear-gradient(0deg,
+    hsl(40, 87%, 59%) 0%,
+    hsl(49, 87%, 73%) 30%,
+    hsl(63, 58%, 94%) 100%);
+  outline: none;
 }
 button:hover, .btn:hover {
-  background: var(--primary);
-  color: white;
+  /* color: white; */
+  background: hsl(40, 87%, 59%);
+  background: linear-gradient(00deg,
+    hsl(40, 74%, 54%) 0%,
+    hsl(49, 68%, 66%) 20%,
+    hsl(0, 0%, 100%) 100%);
 }
 button:disabled {
   opacity: 0.5;
